--- a/src/main/webapp/openlmis-header/header.html
+++ b/src/main/webapp/openlmis-header/header.html
@@ -1,10 +1,9 @@
-<div ng-controller="HeaderController" class="openlmis-header" ng-class="{'is-offline':isOffline}" offline>
-    <img class="openlmis-logo" src="images/logo.png"/>
-    <h1 class="openlmis-title">{{'label.app.header' | message}}</h1>
+<div ng-controller="HeaderController as vm" class="openlmis-header" ng-class="{'is-offline':isOffline}" offline>
+    <h1 class="title">{{'label.app.header' | message}}</h1>
     <div class="openlmis-header-actions">
         <div class="status-offline" ng-if="isOffline">
             <span class="offline-status-indicator">{{'msg.youAreOffline' | message}}</span>
-            <button class="primary" ng-click="checkConnection()">{{'button.checkConnection' | message}}</button>
+            <a ng-click="vm.checkConnection()">{{'button.checkConnection' | message}}</a>
         </div>
         <div ng-show="!!user">
             <ng-include src="'openlmis-header/user.html'"></ng-include>
