OLMIS-1808: Made form controls work in product grid
- Split cell types into different files
- Added popover to show error message

--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -15,9 +15,14 @@
 		<tbody ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'" title="{{category}}">
 			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
 				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
-					product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
+					product-grid-cell
+					requisition="vm.requisition"
+					column="column"
+					line-item="lineItem" ></td>
 				<td class="sticky" ng-if="vm.displayDeleteColumn()">
-					<button class="hide-line-item" ng-click="vm.deleteLineItem(lineItem)" ng-if="lineItem.$deletable">
+					<button class="hide-line-item"
+						ng-click="vm.deleteLineItem(lineItem)"
+						ng-if="lineItem.$deletable">
 						<i class="fa fa-remove"></i>
 					</button>
 				</td>
