--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -13,8 +13,12 @@
 		<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
 			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
 				ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
+				{{lineItem}}
 				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
-					product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
+					 product-grid-cell
+					 requisition="vm.requisition"
+					 column="column"
+					 line-item="lineItem" ></td>
 			</tr>
 		</tbody>
 	</table>
