--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -1,7 +1,7 @@
 <div class="page">
     <h2>{{'header.managePod' | message}}</h2>
     <section class="openlmis-table-container">
-        <form class="openlmis-table-filters" ng-submit="vm.loadOrders()">
+        <form ng-submit="vm.loadOrders()">
             <fieldset class="form-group">
                 <legend>{{'label.requisition.facilityType' | message}}</legend>
                 <label class="radio">
