--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -2,7 +2,7 @@
 	<div class="page">
 		<h2>{{'label.requisition.convertOrder' | message}}</h2>
 		<section class="openlmis-table-container">
-			<form class="openlmis-table-filters" ng-submit="vm.changePage()">
+			<form ng-submit="vm.changePage()">
 				<label for="searchFor">{{'label.search' | message}}</label>
 				<input id="searchFor" type="text" ng-model="vm.stateParams.filterValue"
 					   maxlength="50"/>
@@ -54,13 +54,13 @@
 					</tr>
 				</tbody>
 			</table>
+			<openlmis-pagination ng-model="vm.stateParams.page"
+				ng-change="vm.changePage()"
+				total-items="vm.totalItems"
+				items="vm.pageItems.length"
+				page-size="vm.stateParams.size">
+			</openlmis-pagination>
 		</section>
-		<openlmis-pagination ng-model="vm.stateParams.page"
-			ng-change="vm.changePage()"
-			total-items="vm.totalItems"
-			items="vm.pageItems.length"
-			page-size="vm.stateParams.size">
-		</openlmis-pagination>
 	</div>
 	<div class="openlmis-toolbar" ng-if="vm.pageItems.length">
 	    <button class="primary" ng-click="vm.convertToOrder()">{{'link.requisitions.convertToOrder' | message}}</button>
