--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -1,5 +1,5 @@
 <div class="non-full-supply openlmis-table-container">
-	<button class="primary" ng-if="vm.displayAddProductButton" ng-click="vm.addProduct()" >
+	<button class="primary" ng-show="vm.displayAddProductButton" ng-click="vm.addProduct()" >
 		{{'button.add' | message}}
 	</button>
 	<table>
