--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -1,55 +1,53 @@
 <div class="page">
     <ng-include src="'proof-of-delivery-view/header.html'"></ng-include>
     <div class="product-grid openlmis-table-container">
-        <div class="openlmis-table">
-            <table table-pinned-columns>
-                <thead>
-                    <tr>
-                        <th>{{'label.productName' | message}}</th>
-                        <th>{{'label.productUnit' | message}}</th>
-                        <th>{{'label.packsToShip' | message}}</th>
-                        <th>{{'label.quantityShipped' | message}}</th>
-                        <th>{{'label.quantityReceived' | message}}</th>
-                        <th>{{'label.quantityReturned' | message}}</th>
-                        <th>{{'label.replacedProductCode' | message}}</th>
-                        <th>{{'label.notes' | message}}</th>
-                    </tr>
-                </thead>
-                <tbody title="{{category}}"
-                        ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
-                    <tr ng-class="{'invalid-row': !vm.pod.isLineItemValid(lineItem)}"
-                        ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderable.name'">
-                        <td>{{lineItem.orderLineItem.orderable.name}}</td>
-                        <td>{{lineItem.orderLineItem.orderable.dispensable.dispensingUnit}}</td>
-                        <td>{{lineItem.orderLineItem.packsToShip}}</td>
-                        <td>{{lineItem.quantityShipped}}</td>
-                        <td>
-                            <div ng-if="!vm.isSubmitted()">
-                                <input positive-integer type="text" ng-model="lineItem.quantityReceived" ng-change="lineItem.validate()" ng-blur="lineItem.validate()"/>
-                                <div ng-if="lineItem.$errors.quantityReceived" class="cell-error-message">{{lineItem.$errors.quantityReceived}}</div>
-                            </div>
-                            <div ng-if="vm.isSubmitted()">{{lineItem.quantityReceived}}</div>
-                        </td>
-                        <td>
-                            <input ng-if="!vm.isSubmitted()" positive-integer type="text" ng-model="lineItem.quantityReturned"/>
-                            <div ng-if="vm.isSubmitted()">{{lineItem.quantityReturned}}</div>
-                        </td>
-                        <td>{{lineItem.replacedProductCode}}</td>
-                        <td>
-                            <input ng-if="!vm.isSubmitted()" type="text" ng-model="lineItem.notes"/>
-                            <div ng-if="vm.isSubmitted()">{{lineItem.notes}}</div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <openlmis-pagination ng-model="vm.stateParams.page"
-                ng-change="vm.changePage()"
-                total-items="vm.totalItems"
-                items="vm.pageItems.length"
-                page-size="vm.stateParams.size"
-                page-validator="vm.isPageValid">
-            </openlmis-pagination>
-        </div>
+        <table >
+            <thead>
+                <tr>
+                    <th>{{'label.productName' | message}}</th>
+                    <th>{{'label.productUnit' | message}}</th>
+                    <th>{{'label.packsToShip' | message}}</th>
+                    <th>{{'label.quantityShipped' | message}}</th>
+                    <th>{{'label.quantityReceived' | message}}</th>
+                    <th>{{'label.quantityReturned' | message}}</th>
+                    <th>{{'label.replacedProductCode' | message}}</th>
+                    <th>{{'label.notes' | message}}</th>
+                </tr>
+            </thead>
+            <tbody title="{{category}}"
+                    ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
+                <tr ng-class="{'invalid-row': !vm.pod.isLineItemValid(lineItem)}"
+                    ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderable.name'">
+                    <td>{{lineItem.orderLineItem.orderable.name}}</td>
+                    <td>{{lineItem.orderLineItem.orderable.dispensable.dispensingUnit}}</td>
+                    <td>{{lineItem.orderLineItem.packsToShip}}</td>
+                    <td>{{lineItem.quantityShipped}}</td>
+                    <td>
+                        <div ng-if="!vm.isSubmitted()">
+                            <input positive-integer type="text" ng-model="lineItem.quantityReceived" ng-change="lineItem.validate()" ng-blur="lineItem.validate()"/>
+                            <div ng-if="lineItem.$errors.quantityReceived" class="cell-error-message">{{lineItem.$errors.quantityReceived}}</div>
+                        </div>
+                        <div ng-if="vm.isSubmitted()">{{lineItem.quantityReceived}}</div>
+                    </td>
+                    <td>
+                        <input ng-if="!vm.isSubmitted()" positive-integer type="text" ng-model="lineItem.quantityReturned"/>
+                        <div ng-if="vm.isSubmitted()">{{lineItem.quantityReturned}}</div>
+                    </td>
+                    <td>{{lineItem.replacedProductCode}}</td>
+                    <td>
+                        <input ng-if="!vm.isSubmitted()" type="text" ng-model="lineItem.notes"/>
+                        <div ng-if="vm.isSubmitted()">{{lineItem.notes}}</div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <openlmis-pagination ng-model="vm.stateParams.page"
+            ng-change="vm.changePage()"
+            total-items="vm.totalItems"
+            items="vm.pageItems.length"
+            page-size="vm.stateParams.size"
+            page-validator="vm.isPageValid">
+        </openlmis-pagination>
     </div>
     <ng-include src="'proof-of-delivery-view/footer.html'"></ng-include>
 </div>
