OLMIS-308: Remade Report Generate screen to be a form and follow our styleguide
* added select-required and input-required directives that will add red asterix to required inputs/selects labels
* fixed selectSearchOption directive to support interpolated values
* made reportFactory more generic
* added reportService for communication with backend
* temporarily removed tests - this tech debt will be paid in another ticket along with missing JSDocs

--- a/src/main/webapp/report/report-list.html
+++ b/src/main/webapp/report/report-list.html
@@ -12,7 +12,7 @@
                 <tbody>
                 <tr ng-repeat="report in vm.reports">
                     <td>
-                        <a ng-click="vm.goToReport(report.id)">{{report.name}}</a>
+                        <a ng-click="vm.goToReport(report)">{{report.name}}</a>
                     </td>
                 </tr>
                 </tbody>
