OLMIS-1968: Moved some more pagination related logic to the openlmis-pagination module
* made paginatedRouterProvider responsible for defining the page size
* made paginationFactory stupid, it will no longer try to fallback to default page size, we expect it to be passed
* modified all paginated screens to use the new pattern
* hit pagination when it is not displaying any items

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.html
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.html
@@ -1,5 +1,5 @@
 <div class="openlmis-pagination">
-	<div class="pagination-info">
+	<div class="pagination-info" ng-if="vm.totalItems">
 		{{'msg.showing' | message}} {{vm.items}} {{'msg.lineItems' | message}} {{'msg.outOf' | message}} {{vm.totalItems}} {{'msg.total' | message}}
 	</div>
 	<ul ng-if="vm.totalItems">
