OLMIS-2004: fixed issues with displaying toolbar in view POD screen
added change method for datepicker
refactored action toolbar
added jsdoc to method in view POD controller

--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -20,8 +20,7 @@
         <dd>
             <div ng-if="!vm.isSubmitted()">
                 <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"
-                    ng-change="vm.pod.validateRequiredField('receivedDate')"
-                    ng-blur="vm.pod.validateRequiredField('receivedDate')">
+                    change-method="vm.pod.validateRequiredField('receivedDate')">
                 </openlmis-datepicker>
                 <div ng-if="vm.pod.$errors.receivedDate" class="cell-error-message">{{vm.pod.$errors.receivedDate}}</div>
             </div>
