--- a/src/main/webapp/openlmis-form/datepicker.html
+++ b/src/main/webapp/openlmis-form/datepicker.html
@@ -2,5 +2,6 @@
     <i class="glyphicon glyphicon-calendar olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
         data-container="body" data-autoclose="1" data-date-format="dd/MM/yyyy"
-        data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker/>
+        data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker
+        ng-change="changeMethod()"/>
 </div>
