--- a/src/main/webapp/requisition-status-messages/status-messages.html
+++ b/src/main/webapp/requisition-status-messages/status-messages.html
@@ -2,7 +2,7 @@
     <header>
         <h3>{{'requisition.statusMessages.title' | message}}</h3>
         <a ng-show="vm.requisition.$statusMessages.length > 0" ng-click="vm.displayRequisitionHistory()">{{'label.viewHistory' | message}}</a>
-        <button class="primary" ng-click="vm.addComment()" ng-show="vm.displayAddComment()">{{'button.addComment' | message}}</button>
+        <button class="primary" ng-click="vm.addComment()" ng-if="vm.displayAddComment()">{{'button.addComment' | message}}</button>
     </header>
     <div class="alert" ng-if="!vm.requisition.$statusMessages.length && vm.displayAddComment()">
         {{'msg.noCommentsAdded' | message}}
@@ -21,10 +21,10 @@
             {{vm.requisition.$statusMessages[0].body}}
         </div>
     </div>
-    <div ng-hide="vm.displayAddComment() || vm.requisition.$isReleased()" class="status-message">
+    <div ng-if="vm.displayEditComment()" class="status-message">
         <header>
             <div class="title">{{ 'requisition.statusMessage.currentTitle' | message }}</div>
-            <input type="button" class="danger" value="{{'button.removeComment' | message}}" ng-click="vm.removeComment()" ng-hide="vm.displayAddComment() || vm.requisition.$isReleased()" />
+            <input type="button" class="danger" value="{{'button.removeComment' | message}}" ng-click="vm.removeComment()"/>
         </header>
         <label for="requisition-status-message-textarea">{{'requisition.addStatusMessage.label' | message}}</label>
         <textarea id="requisition-status-message-textarea" ng-model="vm.requisition.draftStatusMessage" ></textarea>
