--- a/src/main/webapp/openlmis-modal/notification.html
+++ b/src/main/webapp/openlmis-modal/notification.html
@@ -1,3 +1,3 @@
 <div class="notification {{class}}" ng-click="closeNotification()">
-	<span class="glyphicon {{glyphicon}}"></span>{{message}}
+	{{message}}
 </div>
