--- a/src/main/webapp/requisition-view/requisition-view.html
+++ b/src/main/webapp/requisition-view/requisition-view.html
@@ -14,20 +14,22 @@
     </header>
     <ng-include src="'requisition-view/header.html'"></ng-include>
     <status-messages requisition="vm.requisition"></status-messages>
-    <ul class="nav nav-tabs">
-        <li ui-sref-active="active" role="presentation"
-            ng-class="{'error': !vm.isFullSupplyTabValid()}">
-                <a ui-sref="requisitions.requisition.fullSupply">
-                    {{'label.full.supply.products' | message}}
-                </a>
-        </li>
-        <li ui-sref-active="active" ng-if="vm.requisition.program.showNonFullSupplyTab"
-            role="presentation" ng-class="{'error': !vm.isNonFullSupplyTabValid()}">
-                <a ui-sref="requisitions.requisition.nonFullSupply">
-                    {{'label.non.full.supply.products' | message}}
-                </a>
-        </li>
-    </ul>
+    <nav>
+      <ul>
+          <li ui-sref-active="active" role="presentation"
+              ng-class="{'is-invalid': !vm.isFullSupplyTabValid()}">
+                  <a ui-sref="requisitions.requisition.fullSupply">
+                      {{'label.full.supply.products' | message}}
+                  </a>
+          </li>
+          <li ui-sref-active="active" ng-if="vm.requisition.program.showNonFullSupplyTab"
+              role="presentation" ng-class="{'is-invalid': !vm.isNonFullSupplyTabValid()}">
+                  <a ui-sref="requisitions.requisition.nonFullSupply">
+                      {{'label.non.full.supply.products' | message}}
+                  </a>
+          </li>
+      </ul>
+    </nav>
     <div ui-view=""></div>
     <requisition-summary requisition="vm.requisition"></requisition-summary>
 </article>
