--- a/src/main/webapp/report/report-list.html
+++ b/src/main/webapp/report/report-list.html
@@ -1,22 +1,20 @@
-<div class="report-list">
-    <div class="page">
-        <h2>{{'header.viewReports' | message}}</h2>
-        <div class="openlmis-table-container">
-            <table class="openlmis-table">
-                <caption class="error" ng-if="!vm.reports.length">{{'message.no.reports' | message}}</caption>
-                <thead>
+<div class="page">
+    <h2>{{'header.viewReports' | message}}</h2>
+    <div class="openlmis-table-container">
+        <table>
+            <caption class="error" ng-if="!vm.reports.length">{{'message.no.reports' | message}}</caption>
+            <thead>
                 <tr>
                     <th>{{'report.header' | message}}</th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 <tr ng-repeat="report in vm.reports">
                     <td>
                         <a ng-click="vm.goToReport(report)">{{report.name}}</a>
                     </td>
                 </tr>
-                </tbody>
-            </table>
-        </div>
+            </tbody>
+        </table>
     </div>
 </div>
