--- a/src/main/webapp/openlmis-modal/alert.html
+++ b/src/main/webapp/openlmis-modal/alert.html
@@ -1,8 +1,7 @@
 <div class=alert-main>
     <span class="glyphicon {{icon}}"></span>
-    <div class="alert-messages">
+    <div class="alert-messages {{alertClass}}">
 		<div>{{message | message}}</div>
 		<div class="alert-message-additional">{{additionalMessage | message}}</div>
 	</div>
 </div>
-<footer>{{'msg.alert.modal.footer' | message}}</footer>
