OLMIS-1885: changed all glyphicons to font awsome

--- a/src/main/webapp/openlmis-form/datepicker.html
+++ b/src/main/webapp/openlmis-form/datepicker.html
@@ -1,5 +1,5 @@
 <div class="olmis-datepicker">
-    <i class="glyphicon glyphicon-calendar olmis-datepicker-icon"></i>
+    <i class="olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
         data-container="body" data-autoclose="1" data-date-format="dd/MM/yyyy"
         data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker
