--- a/src/main/webapp/openlmis-modal/alert.html
+++ b/src/main/webapp/openlmis-modal/alert.html
@@ -1,5 +1,5 @@
 <div class=alert-main>
-    <span class="glyphicon {{icon}}"></span>
+    <span class="icon {{alertClass}}"></span>
     <div class="alert-messages {{alertClass}}">
 		<div>{{message | message}}</div>
 		<div class="alert-message-additional">{{additionalMessage | message}}</div>
