OLMIS-1769: Make PDF the default type

--- a/src/main/webapp/report/report-generate.html
+++ b/src/main/webapp/report/report-generate.html
@@ -6,7 +6,7 @@
         <fieldset class="form-group">
             <legend>{{'label.format' | message}}</legend>
             <label class="radio">
-                <input type="radio" ng-model="vm.format" value="pdf" required/>
+                <input type="radio" ng-model="vm.format" value="pdf" required checked="checked"/>
                 {{'button.report.pdf' | message}}
             </label>
             <label class="radio">
