OLMIS-1993: Improved the first loading experience
New, more elegant screen will now be shown when the application is starting up.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,12 +30,8 @@
             </div>
         </header>
         <div ui-view>
-            <div class="modal loading-modal non-js-modal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-body"></div>
-                    </div>
-                </div>
+            <div class="loading-view">
+                <i class="loading-icon"></i>
             </div>
         </div>
     </body>
