OLMIS-1993: Improved the look of initial loading view and fixed Initiate button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,9 @@
         </header>
         <div ui-view>
             <div class="loading-view">
-                <i class="loading-icon"></i>
+                <div class="loading-view-body">
+                    <div>Loading...</div>
+                </div>
             </div>
         </div>
     </body>
