OLMIS-1807: Standardized border colors

--- a/src/main/webapp/requisition-product-grid/product-grid-cell.html
+++ b/src/main/webapp/requisition-product-grid/product-grid-cell.html
@@ -1,4 +1,4 @@
-<td ng-class="{sticky:!column.$canChangeOrder}"
+<td ng-class="{sticky:!column.$canChangeOrder, 'is-invalid':invalidMessage}"
 	class="requisition-product-grid-cell"
 	popover="{{invalidMessage}}"
 ></td>
