OLMIS-1807: Updated favicons

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,8 @@
     <head>
         <meta charset="utf-8">
         <title>@@APPLICATION_TITLE</title>
-        <link rel="icon" href="favicon-32.png" type="image/png" size="32x32"/>
+        <link rel="icon" href="favicon.ico" />
+        <link rel="icon" href="favicon-32.png" type="image/png" sizes="32x32" />
         <link rel="shortcut icon" href="favicon-156.png" type="image/png" size="156x156"/>
         <link rel="stylesheet" href="openlmis.css">
         <script type="text/javascript" src="openlmis.js" async="true"></script>
