Made default language configurable

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
   ~ If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 
-<html lang="en" ng-app="openlmis" manifest="manifest.appcache" xmlns="http://www.w3.org/1999/html">
+<html lang="@@DEFAULT_LANGUAGE" ng-app="openlmis" manifest="manifest.appcache" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="utf-8">
         <title>@@APPLICATION_TITLE</title>
