--- a/src/main/webapp/requisition-status-messages/status-messages.html
+++ b/src/main/webapp/requisition-status-messages/status-messages.html
@@ -19,10 +19,10 @@
         </header>
         <div class="content">{{vm.requisition.$statusMessages[0].body}}</div>
     </article>
-    <article ng-hide="vm.displayAddComment() || vm.requisition.$isReleased()" class="status-message is-editable">
+    <article ng-if="vm.displayEditComment()" class="status-message is-editable">
         <header>
             <label class="title" for="requisition-status-message-textarea">{{'requisition.addStatusMessage.label' | message}}</label>
-            <button class="close" ng-click="vm.removeComment()" ng-hide="vm.displayAddComment() || vm.requisition.$isReleased()" >{{'button.removeComment' | message}}</button>
+            <button class="close" ng-click="vm.removeComment()">{{'button.removeComment' | message}}</button>
         </header>
         <div>
             <textarea id="requisition-status-message-textarea" ng-model="vm.requisition.draftStatusMessage" ></textarea>
